--- a/index.html
+++ b/index.html
@@ -955,27 +955,25 @@ The final output MUST be only the JSON code, like this example:
         return { prompt, maxTokens };
     };
 
-    // Arquivo: index.html - removeMetaComments VERSÃO 2 (APRIMORADA)
+    // Arquivo: index.html - removeMetaComments VERSÃO 3 (Com RegEx)
     const removeMetaComments = (text) => {
-        const metaKeywords = [
-            "Here's the script", "This section aims to", "The script for the",
-            "This part of the script", "The goal of this section", "This introduction script",
-            "This development section", "The tone is", "This climax part", "The conclusion summarizes",
-            "Here is a compelling YouTube video description" // <-- ADICIONAMOS A NOVA FRASE
-        ];
-        
+        if (!text) return text;
+
         let cleanedText = text;
 
-        // Remove frases introdutórias completas
-        metaKeywords.forEach(phrase => {
-            // Cria uma expressão regular para encontrar a frase, ignorando maiúsculas/minúsculas,
-            // e lidando com variações de pontuação e espaços.
-            const regex = new RegExp(phrase + ".*?\\n", "gi");
-            cleanedText = cleanedText.replace(regex, '');
-        });
+        // Padrão 1: Remove frases como "Here's the **Section** section..." ou "Here is a compelling..."
+        // Esta RegEx procura por "Here's" ou "Here is", seguido por qualquer texto (.*?), 
+        // até encontrar a primeira quebra de linha (\n). Ela remove a linha inteira.
+        const introPattern = /^(Here's|Here is)\s.*?\n/gim;
+        cleanedText = cleanedText.replace(introPattern, '');
 
-        // Remove possíveis marcadores de seção que sobraram
-        cleanedText = cleanedText.replace(/^\*\*[\w\s]+\*\*$/gm, '');
+        // Padrão 2: Remove linhas que são apenas títulos de seção, como "**Description:**" ou "**Hashtags:**"
+        // se eles estiverem sozinhos em uma linha, mas mantém se tiverem texto depois.
+        // O código atual já faz isso bem ao separar o conteúdo. Vamos refinar.
+        // Esta limpeza pode ser feita no momento da exibição, mas vamos tentar aqui primeiro.
+        // A lógica de extrair a descrição e hashtags separadamente pode ser mais robusta.
+
+        // Por enquanto, o Padrão 1 é o mais crucial.
         
         return cleanedText.trim();
     };
