Fix: Aprimora estilos do modo escuro para a seção de títulos

--- a/index.html
+++ b/index.html
@@ -428,6 +428,26 @@
         .dark #darkModeToggle {
             color: #9ca3af;
         }
+        /* ======================================================= */
+        /* ======== ADIÇÕES PARA POLIMENTO DO MODO ESCURO ======== */
+        /* ======================================================= */
+        /* Corrige a cor dos subtítulos (h4) dentro das seções */
+        .dark .script-section h4 {
+            color: #e5e7eb; /* gray-200 */
+        }
+        /* Corrige o fundo e o texto das caixas internas na seção de Títulos */
+        .dark .p-3.border.border-gray-200 {
+            background-color: #374151; /* gray-700 */
+            border-color: #4b5563; /* gray-600 */
+        }
+        /* Corrige a cor do texto dos títulos de vídeo gerados */
+        .dark .p-3.border.border-gray-200 p {
+            color: #d1d5db; /* gray-300 */
+        }
+        /* Corrige a cor do título da thumbnail (que está em negrito) */
+        .dark .p-3.border.border-gray-200 .font-semibold {
+            color: #f9fafb; /* gray-50 */
+        }
     </style>
 </head>
 <body>
