--- a/index.html
+++ b/index.html
@@ -563,8 +563,10 @@
                 <label for="narrativeStyle">Estilo da Narrativa:</label>
                 <select id="narrativeStyle">
                     <option value="direct" selected>Direto e Informativo (Padrão)</option>
+                    <option value="heros_journey">Jornada do Herói (Clássico)</option>
                     <option value="mystery_loop">Mistério (com Loop Aberto)</option>
-                    <option value="pas">Problema-Agitação-Solução</option>
+                    <option value="pas">Problema-Agitação-Solução (PAS)</option>
+                    <option value="before_after_bridge">Antes-Depois-Ponte (BAB)</option>
                     <option value="twist">Narrativa com Virada (Twist)</option>
                 </select>
             </div>
@@ -1023,7 +1025,26 @@ gsk_yyyyyyyyyyyyyyyyyyyyyy)"></textarea>
                 - In the **Climax**, introduce a surprising new piece of information or a counter-argument that completely changes the expected outcome (the 'twist').
                 - The **Conclusion** should reflect on the implications of this new, unexpected truth.`;
                 break;
-        }
+            // ==========================================================
+            // ========= ADICIONE ESTES DOIS NOVOS CASES AQUI =========
+            // ==========================================================
+            case 'heros_journey':
+                prompt += `\n\nNARRATIVE STYLE: Use the 'Hero's Journey' structure.
+                - **Introduction:** Present the 'Ordinary World' and the 'Call to Adventure'. Introduce the central character or concept.
+                - **Development:** This is the 'Special World'. Describe the trials, allies, and enemies. Build the character's transformation through challenges.
+                - **Climax:** The 'Ordeal' or the final battle. The moment of greatest tension and the hero's ultimate test.
+                - **Conclusion:** The 'Return with the Elixir'. Show the resolution, what was learned, and how the 'Ordinary World' has changed because of the journey.`;
+                break;
+
+            case 'before_after_bridge':
+                prompt += `\n\nNARRATIVE STYLE: Use the 'Before-After-Bridge' (BAB) structure.
+                - **Introduction (Before):** Describe the 'Before' state. A world without the knowledge or solution you're about to present. Paint a picture of the problem or the lack of understanding.
+                - **Development (After):** Describe the 'After' state. A desirable world where the problem is solved or the knowledge is revealed. Show the benefits and the ideal outcome.
+                - **Climax & Conclusion (The Bridge):** Present your content as 'The Bridge'. Explain how your video's information is the exact path to get from the 'Before' state to the 'After' state. This is the solution, the 'how-to'.`;
+                break;
+            // ==========================================================
+            // ==========================================================
+        } // Fim do switch
 
         prompt += `\n\nIMPORTANT WRITING STYLE: Use the 'Show, Don't Tell' principle. Instead of stating facts plainly, use descriptive, evocative language to paint a picture in the viewer's mind. Create a sensory and visual experience through your words.`;
 
@@ -1493,8 +1514,12 @@ ${scriptContent}
                 }
                 const fullInnerHtml = `
                     <div class="whitespace-normal">
-                        <h3>Títulos e Thumbnails</h3>
-                        <button class="copy-btn" onclick="copyTextToClipboard(document.getElementById('titlesThumbnailsSection').textContent)">Copiar</button>
+                        <div class="section-header">
+                            <h3>Títulos e Thumbnails</h3>
+                            <div class="header-buttons">
+                                <button class="copy-btn" onclick="copyTextToClipboard(document.getElementById('titlesThumbnailsSection').textContent)">Copiar</button>
+                            </div>
+                        </div>
                         
                         <div class="mt-4 space-y-6">
                             <div>
@@ -1502,6 +1527,18 @@ ${scriptContent}
                                 <div class="p-3 border border-gray-200 rounded-md bg-white shadow-sm space-y-2">
                                     ${titlesListHtml}
                                 </div>
+
+                                <!-- ============================================= -->
+                                <!-- ======== NOVO BOTÃO E CONTAINER AQUI ======== -->
+                                <!-- ============================================= -->
+                                <div class="mt-4">
+                                    <button class="btn btn-secondary btn-small" onclick="window.analyzeTitles()">
+                                        Analisar Potencial de Clique (CTR)
+                                    </button>
+                                    <div id="ctrAnalysisResult" class="mt-4"></div>
+                                </div>
+                                <!-- ============================================= -->
+
                             </div>
                             <div>
                                 <h4 class="font-bold text-lg text-gray-700 mb-2">Thumbnails:</h4>
