Fine-tuning: Força o primeiro prompt a usar a primeira frase do roteiro

--- a/index.html
+++ b/index.html
@@ -1387,6 +1387,8 @@ The final output MUST be only the JSON code, like this example:
 
 **SUA REGRA MAIS IMPORTANTE é manter um ritmo dinâmico.** Não crie uma imagem para cada frase. O objetivo é criar um prompt a cada **15 a 25 segundos de narração**, aproximadamente. Isso significa que você deve LER várias frases, entender o tempo de narração e só então escolher o momento mais impactante DENTRO desse bloco de tempo para criar UM prompt.
 
+**IMAGEM INICIAL INEGOCIÁVEL:** O primeiro prompt de imagem que você criar **DEVE OBRIGATORIAMENTE** corresponder à **PRIMEIRA FRASE COMPLETA** do trecho do roteiro. Sem exceções. O vídeo precisa de um impacto visual imediato.
+
 Encontre os pontos de virada ou as imagens mentais mais fortes dentro desses intervalos de tempo.
 
 Responda APENAS com um array JSON de objetos (com chaves "scriptPhrase" e "imageDescription").
